Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidPropertyInjection.php
<?php
/** @Service */
class FooClassInvalidPropertyInjection
{
    /** @Inject({"foo"}) */
    private $fooService;

    public function setFooService($fooService)
    {
    }
}
